...
                    Column (
                        Modifier.fillMaxSize(),
                        Arrangement.spacedBy(10.dp, Alignment.CenterVertically),
                        Alignment.CenterHorizontally
                    ) {
                        ReportTitle("List Reports", Modifier.width(width))
                        ReportList(reportListState.value, Modifier.width(width).height(550.dp)) {
                                reportId ->
                            startActivity(Intent(
                                this@ListReportsActivity,
                                ViewReportsActivity::class.java
                            ).apply { putExtra("ReportId", reportId) })
                            finish()
                        }
                        ReportButton(
                            "Back",
                            outlined = true,
                            modifier = Modifier.width(width).testTag("ListReportsBackButton")
                        ) { finish() }
                    }
                }
            }
        }
    }
...
