...
        colors = ButtonDefaults.buttonColors(
            containerColor = DiscordBlurple
        ),
        modifier = Modifier
            .width(250.dp)
            .height(40.dp)
            .testTag("login_button")
    ) {
        Row (
            horizontalArrangement = Arrangement.spacedBy(16.dp)
        ) {
            Image(
                painterResource(R.drawable.discord_icon),
...
