...
                        context.startActivity(
                            Intent(
                                context,
                                ListReportsActivity::class.java
                            )
                        )
                    }.testTag("ViewReportsButton"),
                contentAlignment = Alignment.Center
            ) {
                Text(
                    text = "View Reports",
                    color = BlueDarker,
                    fontFamily = regularText,
...
